# vndoc-intelligenc-platform

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  HANDOVER.md  README.md
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/gradle/: libs.versions.toml
android/sample-app/: build.gradle.kts
android/vndoc-sdk/: build.gradle.kts  consumer-rules.pro
docs/: 00-tong-quan-va-pham-vi.md  01-thuat-ngu-va-danh-muc-giay-to.md  02-yeu-cau-he-thong.md  03-kien-truc-tong-the.md  04-quyet-dinh-cong-nghe-adr.md  05-phan-loai-va-plugin.md  06-pipeline-ocr-va-boc-tach.md  07-dac-ta-api.md  08-dac-ta-truong-va-validation.md  09-android-capture-sdk.md  10-trien-khai-va-hieu-nang.md  11-dong-goi-cai-dat-va-cap-phep.md  README.md
docs/chatgpt/: document-rectification.md
docs/samples/: bhyt-mau-01.md  cccd-2024-mau-01.md  cccd-chip-mau-01.md  cccd-ma-vach-mau-01.md  cmnd-12-mau-01.md  cmnd-9-mau-01.md  gplx-pet-mau-01.md  ho-chieu-mau-01.md  ho-chieu-mau-02.md  the-dang-vien-mau-01.md
experiments/corner-detector/: .gitignore  README.md  corner_onnx.py  corner_rectify.py  eval_golden.py  evaluate.py  export.py  finetune.py  label_corners.py  synth.py  train.py
packaging/: HUONG-DAN-CAI-DAT.md  README.md  launcher.py  requirements-runtime.txt
packaging/config/: vndoc.env.example
rectifier/: .gitignore  README.md  pyproject.toml
rectifier/rectifier/: __init__.py  __main__.py  cli.py  config.py  core.py  enhance.py  geometry.py  segment.py
rectifier/tests/: test_rectifier.py
service/: .gitignore  README.md  conftest.py  requirements.txt
(+146 files in other folders)
